Fixes text overlap in CSS overview panel
This PR will set the min width for each grid item to 150px, it wraps to the next row if it goes below the width.
https://i.imgur.com/6XTPOaG.mp4

Bug:1264334
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3311915
Commit-Queue: Chait Pinnamaneni <cpinnamaneni@microsoft.com>

--- a/front_end/panels/css_overview/cssOverviewCompletedView.css
+++ b/front_end/panels/css_overview/cssOverviewCompletedView.css
@@ -249,7 +249,7 @@
 
 .overview-completed-view .font-info .font-metric {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   grid-gap: 12px;
 }
 
